<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background">

    <TextView
        android:id="@+id/tittle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/add"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/lblName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="57dp"
        android:fontFamily="monospace"
        android:text="@string/name"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@+id/lblCompany"
        app:layout_constraintStart_toStartOf="@+id/lblCompany"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/lblCompany"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="36dp"
        android:fontFamily="monospace"
        android:text="@string/company"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@+id/lblYear"
        app:layout_constraintStart_toStartOf="@+id/lblYear"
        app:layout_constraintTop_toBottomOf="@+id/lblName" />

    <TextView
        android:id="@+id/lblYear"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="41dp"
        android:fontFamily="monospace"
        android:text="@string/year"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@+id/spnPlatforms"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lblCompany" />

    <Spinner
        android:id="@+id/spnPlatforms"
        android:layout_width="@dimen/search_bar_width"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.512"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tittle" />

    <Button
        android:id="@+id/btnCancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="91dp"
        android:text="@string/cancel"
        app:backgroundTint="@color/Cancel"
        app:iconTint="@color/Cancel"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.207"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/spnPlatforms"
        app:layout_constraintVertical_bias="0.159"
        app:rippleColor="@color/Cancel" />

    <Button
        android:id="@+id/btnSave"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:text="@string/Save"
        app:backgroundTint="@color/btn_background"
        app:layout_constraintBottom_toBottomOf="@+id/btnCancel"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.558"
        app:layout_constraintStart_toEndOf="@+id/btnCancel"
        app:layout_constraintTop_toTopOf="@+id/btnCancel"
        app:layout_constraintVertical_bias="0.0" />

    <EditText
        android:id="@+id/etName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="48dp"
        android:ems="10"
        android:fontFamily="monospace"
        android:hint="@string/name"
        android:inputType="text"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="@+id/lblName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/lblName"
        app:layout_constraintTop_toTopOf="@+id/lblName" />

    <EditText
        android:id="@+id/etCompany"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="19dp"
        android:layout_marginTop="9dp"
        android:ems="10"
        android:fontFamily="monospace"
        android:hint="@string/company"
        android:inputType="text"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="@+id/lblCompany"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/lblCompany"
        app:layout_constraintTop_toTopOf="@+id/lblCompany" />

    <EditText
        android:id="@+id/etYear"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="95dp"
        android:ems="10"
        android:fontFamily="monospace"
        android:hint="@string/year_example"
        android:inputType="number"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="@+id/lblYear"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/lblYear"
        app:layout_constraintTop_toTopOf="@+id/lblYear" />

</androidx.constraintlayout.widget.ConstraintLayout>